--- a/ltdl/Makefile.in
+++ b/ltdl/Makefile.in
@@ -239,11 +239,11 @@ xml2_config = @xml2_config@
 
 AUTOMAKE_OPTIONS = 1.6.2 no-dependencies foreign
 
-@INSTALL_LTDL_TRUE@include_HEADERS = ltdl.h
-@INSTALL_LTDL_TRUE@lib_LTLIBRARIES = libltdl.la
-@INSTALL_LTDL_FALSE@noinst_HEADERS = ltdl.h
+@INSTALL_LTDL_TRUE@@WITH_MODULES_TRUE@include_HEADERS = ltdl.h
+@INSTALL_LTDL_TRUE@@WITH_MODULES_TRUE@lib_LTLIBRARIES = libltdl.la
+@INSTALL_LTDL_FALSE@@WITH_MODULES_TRUE@noinst_HEADERS = ltdl.h
 
-@CONVENIENCE_LTDL_TRUE@noinst_LTLIBRARIES = libltdlc.la
+@CONVENIENCE_LTDL_TRUE@@WITH_MODULES_TRUE@noinst_LTLIBRARIES = libltdlc.la
 
 CLEANFILES = libltdl.la libltdlc.la
 
