--- a/png/scripts/libpng-config-head.in
+++ b/png/scripts/libpng-config-head.in
@@ -8,10 +8,11 @@
 
 # Modeled after libxml-config.
 
-version=1.2.3
+version=1.2.4
 prefix=""
 cppflags=""
 cflags=""
 ldflags=""
 libs=""
+rpath=""
 
