--- a/png/scripts/makefile.cygwin
+++ b/png/scripts/makefile.cygwin
@@ -26,7 +26,7 @@ endif
 #    make install DESTDIR=/tmp/build/libpng
 #
 # If you're going to install into a temporary location
-# via DESTDIR, that location must already exist before
+# via DESTDIR, $(DESTDIR)$(prefix) must already exist before
 # you execute make install.
 
 DESTDIR=
@@ -78,8 +78,8 @@ CFLAGS= $(strip $(MINGW_CCFLAGS) $(addprefix -I,$(ZLIBINC)) \
 
 LIBNAME = libpng12
 PNGMAJ = 0
-PNGDLL = 12
-PNGMIN = 1.2.3
+PNGDLL = 13
+PNGMIN = 1.2.4
 PNGVER = $(PNGMAJ).$(PNGMIN)
 
 SHAREDLIB=cygpng$(PNGDLL).dll
@@ -108,9 +108,9 @@ MAN5PATH=$(MANPATH)/man5
 # cosmetic: shortened strings:
 S =$(SRCDIR)
 D =$(DESTDIR)
-DB =$(D)/$(BINPATH)
-DI =$(D)/$(INCPATH)
-DL =$(D)/$(LIBPATH)
+DB =$(D)$(BINPATH)
+DI =$(D)$(INCPATH)
+DL =$(D)$(LIBPATH)
 
 OBJS = png.o pngset.o pngget.o pngrutil.o pngtrans.o pngwutil.o \
 	pngread.o pngrio.o pngwio.o pngwrite.o pngrtran.o \
@@ -126,7 +126,7 @@ OBJSDLL = $(OBJS:.o=.pic.o)
 %.pic.o : %.c
 	$(CC) -c $(CFLAGS) -o $@ $<
 
-all: all-static all-shared libpng.pc libpng-config
+all: all-static all-shared libpng.pc libpng-config libpng.pc libpng-config
 
 # Make this to verify that "make [...] install" will do what you want.
 buildsetup-tell:
@@ -150,7 +150,7 @@ libpng-config: scripts/libpng-config-head.in scripts/libpng-config-body.in
 	echo cppflags=\"-I$(INCPATH)/$(LIBNAME)\"; \
 	echo cflags=\"\"; \
 	echo ldflags=\"-L$(LIBPATH)\"; \
-	echo libs=\"-lpng$(PNGDLL) -lz\"; \
+	echo libs=\"-lpng$(PNGMAJ) -lz\"; \
 	cat $(S)/scripts/libpng-config-body.in ) > libpng-config
 	chmod +x libpng-config
 
@@ -258,13 +258,22 @@ test-config-install: $(DB)/libpng-config
     gytiu=$$(( $$gytiu + 1 )); \
    done
 
-
 install: install-static install-shared install-man install-config
+
+# If you installed in $(DESTDIR), test-installed won't work until you
+# move the library to its final location.
+
+test-installed:
+	$(CC) $(CFLAGS) \
+	   `$(BINPATH)/libpng12-config --cppflags --cflags` pngtest.c \
+	   -L$(ZLIBLIB) \
+	   -o pngtesti$(EXE) `$(BINPATH)/libpng12-config --ldflags --libs`
+	./pngtesti$(EXE) pngtest.png
 
 clean:
 	/bin/rm -f *.pic.o *.o $(STATLIB) $(IMPLIB) $(SHAREDLIB) \
 	pngtest-stat$(EXE) pngtest$(EXE) pngout.png $(SHAREDDEF) \
-	libpng-config libpng.pc
+	libpng-config libpng.pc pngtesti$(EXE)
 
 DOCS = ANNOUNCE CHANGES INSTALL KNOWNBUG LICENSE README TODO Y2KINFO
 writelock:
