--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -665,7 +665,7 @@ clean-local:
 	rm -f *out*.*
 
 check-rwblob:
-	@status=0 ; \
+	-@status=0 ; \
 	format='' ; \
 	for format in $(CHECK_BLOB_FORMATS) ; \
 	do \
@@ -692,7 +692,7 @@ check-rwblob:
 	exit $$status
 
 check-rwfile:
-	@status=0 ; \
+	-@status=0 ; \
 	format='' ; \
 	for format in $(CHECK_FILE_FORMATS) ; \
 	do \
