--- a/magick/Makefile.in
+++ b/magick/Makefile.in
@@ -284,9 +284,9 @@ bin_SCRIPTS = Magick-config
 # Headers which are installed
 include_HEADERS = PreRvIcccm.h api.h attribute.h blob.h cache.h \
   cache_view.h classify.h compress.h magick_config.h delegate.h draw.h \
-  render.h error.h gem.h image.h list.h magic.h magick.h module.h monitor.h \
-  quantize.h registry.h semaphore.h timer.h utility.h version.h widget.h \
-  xwindow.h
+  render.h error.h gem.h image.h list.h magic.h magick.h memory.h \
+  module.h monitor.h quantize.h registry.h semaphore.h timer.h \
+  utility.h version.h widget.h xwindow.h
 
 
 # Headers which are not installed but which are distributed
