--- a/magick/Makefile.in
+++ b/magick/Makefile.in
@@ -267,9 +267,9 @@ MAGICK_BASE_SRCS = memory.c blob.c cache.c error.c monitor.c constitute.c \
 
 
 # Platform specific source files that may appear in the library
-EXTRA_libMagick_la_SOURCES = nt.c
+EXTRA_libMagick_la_SOURCES = ntbase.c ntfeature.c
 
-@WIN32_NATIVE_TRUE@MAGICK_PLATFORM_SRCS = nt.c
+@WIN32_NATIVE_TRUE@MAGICK_PLATFORM_SRCS = ntbase.c ntfeature.c
 @WIN32_NATIVE_FALSE@MAGICK_PLATFORM_SRCS = 
 
 # Library sources
@@ -294,7 +294,7 @@ noinst_HEADERS = animate.h display.h mac.h nt.h studio.h vms.h
 
 # Additional files to distribute
 EXTRA_DIST = $(ALLMANPAGES) colors.mgk magic.mgk Magick-config.in \
-  Magick-config.in Make.com mac.c nt.c vms.c $(MAGICK_BASE_SRCS)
+  Magick-config.in Make.com mac.c ntbase.c ntfeature.c vms.c $(MAGICK_BASE_SRCS)
 
 
 # Where modules are installed
@@ -326,7 +326,7 @@ am__objects_1 = memory.lo blob.lo cache.lo error.lo monitor.lo \
 	magic.lo magick.lo delegate.lo module.lo static.lo timer.lo \
 	utility.lo cache_view.lo stream.lo animate.lo display.lo \
 	widget.lo xwindow.lo PreRvIcccm.lo
-@WIN32_NATIVE_TRUE@am__objects_2 = nt.lo
+@WIN32_NATIVE_TRUE@am__objects_2 = ntbase.lo ntfeature.lo
 @WIN32_NATIVE_FALSE@am__objects_2 =
 @WITH_MODULES_TRUE@am_libMagick_la_OBJECTS = $(am__objects_1) \
 @WITH_MODULES_TRUE@	$(am__objects_2)
@@ -354,15 +354,16 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/list.Plo ./$(DEPDIR)/magic.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/magick.Plo ./$(DEPDIR)/memory.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/module.Plo ./$(DEPDIR)/monitor.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/montage.Plo ./$(DEPDIR)/nt.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/quantize.Plo ./$(DEPDIR)/registry.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/render.Plo ./$(DEPDIR)/segment.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/semaphore.Plo ./$(DEPDIR)/shear.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/signature.Plo ./$(DEPDIR)/static.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/stream.Plo ./$(DEPDIR)/timer.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/transform.Plo ./$(DEPDIR)/type.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/utility.Plo ./$(DEPDIR)/widget.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/xwindow.Plo ./$(DEPDIR)/zoom.Plo
+@AMDEP_TRUE@	./$(DEPDIR)/montage.Plo ./$(DEPDIR)/ntbase.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/ntfeature.Plo ./$(DEPDIR)/quantize.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/registry.Plo ./$(DEPDIR)/render.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/segment.Plo ./$(DEPDIR)/semaphore.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/shear.Plo ./$(DEPDIR)/signature.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/static.Plo ./$(DEPDIR)/stream.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/timer.Plo ./$(DEPDIR)/transform.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/type.Plo ./$(DEPDIR)/utility.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/widget.Plo ./$(DEPDIR)/xwindow.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/zoom.Plo
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) \
@@ -497,7 +498,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/module.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/monitor.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/montage.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/nt.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ntbase.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ntfeature.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/quantize.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/registry.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/render.Plo@am__quote@
