--- a/magick/Makefile.in
+++ b/magick/Makefile.in
@@ -269,8 +269,9 @@ MAGICK_BASE_SRCS = memory.c blob.c cache.c error.c monitor.c constitute.c \
 # Platform specific source files that may appear in the library
 EXTRA_libMagick_la_SOURCES = ntbase.c ntfeature.c
 
-@WIN32_NATIVE_TRUE@MAGICK_PLATFORM_SRCS = ntbase.c ntfeature.c
-@WIN32_NATIVE_FALSE@MAGICK_PLATFORM_SRCS = 
+@CYGWIN_BUILD_FALSE@@WIN32_NATIVE_BUILD_FALSE@MAGICK_PLATFORM_SRCS = 
+@CYGWIN_BUILD_TRUE@@WIN32_NATIVE_BUILD_FALSE@MAGICK_PLATFORM_SRCS = ntfeature.c
+@WIN32_NATIVE_BUILD_TRUE@MAGICK_PLATFORM_SRCS = ntbase.c ntfeature.c
 
 # Library sources
 @WITH_MODULES_TRUE@libMagick_la_SOURCES = $(MAGICK_BASE_SRCS) $(MAGICK_PLATFORM_SRCS)
@@ -290,7 +291,7 @@ include_HEADERS = PreRvIcccm.h api.h attribute.h blob.h cache.h \
 
 
 # Headers which are not installed but which are distributed
-noinst_HEADERS = animate.h display.h mac.h nt.h studio.h vms.h
+noinst_HEADERS = animate.h display.h mac.h ntbase.h ntfeature.h studio.h vms.h
 
 # Additional files to distribute
 EXTRA_DIST = $(ALLMANPAGES) colors.mgk magic.mgk Magick-config.in \
@@ -326,8 +327,10 @@ am__objects_1 = memory.lo blob.lo cache.lo error.lo monitor.lo \
 	magic.lo magick.lo delegate.lo module.lo static.lo timer.lo \
 	utility.lo cache_view.lo stream.lo animate.lo display.lo \
 	widget.lo xwindow.lo PreRvIcccm.lo
-@WIN32_NATIVE_TRUE@am__objects_2 = ntbase.lo ntfeature.lo
-@WIN32_NATIVE_FALSE@am__objects_2 =
+@CYGWIN_BUILD_FALSE@@WIN32_NATIVE_BUILD_FALSE@am__objects_2 =
+@CYGWIN_BUILD_TRUE@@WIN32_NATIVE_BUILD_FALSE@am__objects_2 = \
+@CYGWIN_BUILD_TRUE@@WIN32_NATIVE_BUILD_FALSE@	ntfeature.lo
+@WIN32_NATIVE_BUILD_TRUE@am__objects_2 = ntbase.lo ntfeature.lo
 @WITH_MODULES_TRUE@am_libMagick_la_OBJECTS = $(am__objects_1) \
 @WITH_MODULES_TRUE@	$(am__objects_2)
 @WITH_MODULES_FALSE@am_libMagick_la_OBJECTS = $(am__objects_1) \
