--- a/magick/magick_config.h.in
+++ b/magick/magick_config.h.in
@@ -389,7 +389,7 @@
 /* Pixel cache threshold (defaults to available memory) */
 #undef PixelCacheThreshold
 
-/* Number of bits in a pixel Quantum (8 or 16) */
+/* Number of bits in a pixel Quantum (8/16/32) */
 #undef QuantumDepth
 
 /* Define as the return type of signal handlers (`int' or `void'). */
